# levy

./: .gitignore  README.md  default.nix  driver_limits.lh  global_parameters.lh  levy.cabal  limits.levy  macros.lh  master_commands.lh  sketch_of_dsl.txt
app/: Main.hs
doc/: .gitignore  levy.tex
levy_code_sample/: driver_limits.lh  falsetrigger.levy  limitconfig.levy  master_commands.lh  noodle.levy  power_triggers.levy  sensors.lh  t1.levy  templimit.levy
src/: .gitignore  Makefile  compiler.nb  wolfram_command.wls
src/Levy/: AST.hs  CodeGen.hs  Lex.hs  Parse.hs
test/: TestSuite.hs  tests.nb
