name:                levy
version:             0.1.0.0
author:              John Doty
maintainer:          jpd@noqsi.com
-- A copyright notice.
-- copyright:
category:            Space
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  README.md
-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base                >= 4.10 && < 4.11
                     , mtl                 >= 2.2 && < 2.3
                     , parsec              >= 3.1.13 && < 3.2
                     , parsec-numbers      >= 0.1.0 && < 0.2
                     , containers          >= 0.5 && < 0.6
  default-language:    Haskell2010
  exposed-modules:     Levy.AST
                     , Levy.Lex
                     , Levy.Parse
                     , Levy.CodeGen
  -- Modules required by library but not exposed
  -- other-modules:  
  ghc-options:         -Wall

executable levyc
  main-is:             Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:       levy
                     , base >= 4.10 && < 4.11

  -- Directories containing source files.
  hs-source-dirs:      app
  -- Base language which the package is written in.
  default-language:    Haskell2010

test-suite levy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestSuite.hs
  build-depends:       levy
                     , base             >= 4.7  && < 5
                     , parsec           >= 3.1.13 && < 3.2
                     , tasty            >= 0.11 && < 0.12
                     , tasty-hunit      >= 0.9  && < 1.0
  -- other-modules:       
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite hlint
  type:                exitcode-stdio-1.0
  main-is:             HLint.hs
  build-depends:       base
                     , hlint >= 1.9
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
